[package]
name = "pointspy-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_derive = "1.0.152"
serde = "1.0.152"
tabled = "0.10.0"
plotters = "0.3.0"
chrono = "0.4.23"
regex = "1.4.7"

